src/test/ui/issues/issue-25076.stderr
error[E0277]: the trait bound `(): InOut<_>` is not satisfied
  --> $DIR/issue-25076.rs:10:5
   |
LL |     do_fold(bot(), ());
   |     ^^^^^^^ the trait `InOut<_>` is not implemented for `()`
   |
note: required by `do_fold`
  --> $DIR/issue-25076.rs:5:1
   |
LL | fn do_fold<B, F: InOut<B, Out=B>>(init: B, f: F) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
